--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.10.7"
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
+    "hono": "^4.10.7",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.15.6",
+    "drizzle-kit": "^0.31.7",
+    "drizzle-seed": "^0.3.1",
+    "tsx": "^4.21.0"
   }
 }
