--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "hono-drizzle-postgres-todos",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "db:generate:migrate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
