add seed script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "bun run --hot src/index.ts",
     "db:generate:migrate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "bun run ./scripts/seed.script.ts"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
