--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "db:generate:migrate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "bun run ./scripts/seed.script.ts"
+    "db:seed": "bun run ./scripts/seed.script.ts",
+    "db:reset": "bun run ./scripts/reset.script.ts"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
